--- a/index.html
+++ b/index.html
@@ -526,8 +526,8 @@
         <section class="relative h-[400px] md:h-[700px] w-full overflow-hidden" id="hero">
             <!-- Parallax Background Image -->
             <img 
-                src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?auto=format&fit=crop&q=80&w=2000" 
-                alt="Delicious BBQ Spread" 
+                src="images/Red%20River%20BBQ%20%26%20Grill%20Hero%20image%20food.png" 
+                alt="Red River BBQ & Grill Delicious Food" 
                 class="hero-image w-full h-full object-cover scale-110"
                 id="hero-image"
             />
