--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 <!-- Desktop Navigation Section -->
                 <nav class="hidden md:flex flex-col items-end animate-fadeInDown delay-200" style="opacity: 0; animation-fill-mode: forwards;">
                     <ul class="flex gap-x-6 text-white font-oswald font-bold uppercase text-base tracking-wide">
-                        <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">LOCATIONS & MENUS</a></li>
+                        <li><a href="locations.html" class="nav-link hover:text-yellow-400 transition-all duration-300">LOCATIONS & MENUS</a></li>
                         <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">CATERING</a></li>
                         <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">PARTY ROOM</a></li>
                         <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">CAREERS</a></li>
@@ -444,7 +444,7 @@
             <!-- Main Navigation -->
             <ul class="space-y-1">
                 <li>
-                    <a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all">
+                    <a href="locations.html" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all">
                         <i data-lucide="map-pin" class="w-5 h-5 text-red-500"></i>
                         Locations & Menus
                     </a>
