--- a/locations.html
+++ b/locations.html
@@ -21,6 +21,10 @@
         .glass { background: rgba(0, 0, 0, 0.4); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.1); }
         .gradient-border { position: relative; }
         .gradient-border::before { content: ''; position: absolute; inset: 0; border-radius: inherit; padding: 2px; background: linear-gradient(135deg, #cc0000, #eab308, #cc0000); -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0); mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0); -webkit-mask-composite: xor; mask-composite: exclude; }
+        .btn-outline-modern { position: relative; overflow: hidden; border: 2px solid #fff; transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1); }
+        .btn-outline-modern::before { content: ''; position: absolute; top: 0; left: 0; width: 0; height: 100%; background: #fff; transition: width 0.4s cubic-bezier(0.4, 0, 0.2, 1); z-index: -1; }
+        .btn-outline-modern:hover::before { width: 100%; }
+        .btn-outline-modern:hover { color: #1a1a1a; transform: scale(1.05); }
     </style>
 </head>
 <body class="bg-gray-100 overflow-x-hidden min-h-screen flex flex-col">
