--- a/locations.html
+++ b/locations.html
@@ -104,7 +104,7 @@
     <main class="flex-grow">
         <!-- Page Intro Banner -->
         <section class="relative w-full overflow-hidden">
-            <img src="images/Red%20River%20BBQ%20%26%20Grill%20Hero%20image%20food.png" alt="Red River BBQ & Grill" class="w-full h-[260px] md:h-[420px] object-cover" />
+            <img src="images/RedRiverBBQ&Grill-locationshero.jpg" alt="Red River BBQ & Grill Locations" class="w-full h-[260px] md:h-[420px] object-cover" />
             <div class="absolute inset-0 bg-gradient-to-b from-black/50 via-black/30 to-black/60"></div>
             <div class="absolute inset-0 flex items-end md:items-center justify-center">
                 <div class="text-center pb-6 md:pb-0">
