--- a/league-city.html
+++ b/league-city.html
@@ -154,7 +154,7 @@
                 <!-- Right Column: Map -->
                 <div>
                     <div class="mb-8">
-                        <img src="images/FrankSantos-league-city-RedRiverBBQ.png" alt="Frank Santos - League City Manager" class="w-full h-auto rounded-lg shadow-lg mb-4" />
+                        <img src="images/FrankSantos-league-city-RedRiverBBQ.png" alt="Frank Santos - League City Manager" class="w-full max-w-sm mx-auto h-auto rounded-lg shadow-lg mb-4" />
                         <div class="text-center">
                             <h3 class="font-oswald text-xl font-bold text-gray-800">Frank Santos</h3>
                             <p class="text-red-600 font-bold">General Manager</p>
@@ -163,7 +163,7 @@
 
                     <div class="mb-8">
                         <h2 class="font-oswald text-2xl font-bold text-gray-800 mb-4">Location Map</h2>
-                        <div class="rounded-lg overflow-hidden shadow-lg h-96">
+                        <div class="rounded-lg overflow-hidden shadow-lg h-64">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3441.1234567890!2d-95.5555!3d29.4444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640c0b8b8b8b8b9%3A0x1234567890!2s1911%20E%20Main%20St%2C%20League%20City%2C%20TX%2077573!5e0!3m2!1sen!2sus!4v1234567890" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
