--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 <nav class="hidden md:flex flex-col items-end animate-fadeInDown delay-200" style="opacity: 0; animation-fill-mode: forwards;">
                     <ul class="flex gap-x-6 text-white font-oswald font-bold uppercase text-base tracking-wide">
                         <li><a href="locations.html" class="nav-link hover:text-yellow-400 transition-all duration-300">LOCATIONS & MENUS</a></li>
-                        <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">CATERING</a></li>
+                        <li><a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="nav-link hover:text-yellow-400 transition-all duration-300">CATERING</a></li>
                         <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">PARTY ROOM</a></li>
                         <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">CAREERS</a></li>
                         <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">COMMUNITY</a></li>
@@ -450,7 +450,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all">
+                    <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all">
                         <i data-lucide="utensils" class="w-5 h-5 text-red-500"></i>
                         Catering
                     </a>
@@ -717,7 +717,7 @@
             <a href="#" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
                 <i data-lucide="briefcase" class="w-4 h-4"></i> Careers
             </a>
-            <a href="#" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
+            <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
                 <i data-lucide="utensils" class="w-4 h-4"></i> Catering
             </a>
             <a href="#" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
