--- a/league-city.html
+++ b/league-city.html
@@ -68,7 +68,7 @@
                 <nav class="hidden md:flex flex-col items-end">
                     <ul class="flex gap-x-6 text-white font-oswald font-bold uppercase text-base tracking-wide">
                         <li><a href="locations.html" class="nav-link hover:text-yellow-400 transition-all duration-300">LOCATIONS & MENUS</a></li>
-                        <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">CATERING</a></li>
+                        <li><a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="nav-link hover:text-yellow-400 transition-all duration-300">CATERING</a></li>
                         <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">PARTY ROOM</a></li>
                         <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">CAREERS</a></li>
                         <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">COMMUNITY</a></li>
@@ -94,7 +94,7 @@
         <nav class="p-4">
             <ul class="space-y-1">
                 <li><a href="locations.html" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all"><i data-lucide="map-pin" class="w-5 h-5 text-red-500"></i> Locations & Menus</a></li>
-                <li><a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all"><i data-lucide="utensils" class="w-5 h-5 text-red-500"></i> Catering</a></li>
+                <li><a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all"><i data-lucide="utensils" class="w-5 h-5 text-red-500"></i> Catering</a></li>
                 <li><a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all"><i data-lucide="party-popper" class="w-5 h-5 text-red-500"></i> Party Room</a></li>
                 <li><a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all"><i data-lucide="briefcase" class="w-5 h-5 text-red-500"></i> Careers</a></li>
                 <li><a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all"><i data-lucide="heart" class="w-5 h-5 text-red-500"></i> Community</a></li>
@@ -145,7 +145,7 @@
                         <div class="flex flex-col gap-3">
                             <a href="#" class="inline-block bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-6 rounded-lg transition-all text-center">View Menu</a>
                             <a href="#" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition-all text-center"><i data-lucide="shopping-cart" class="w-4 h-4 inline mr-2"></i> Order Online</a>
-                            <a href="#" class="inline-block bg-orange-600 hover:bg-orange-700 text-white font-bold py-3 px-6 rounded-lg transition-all text-center"><i data-lucide="utensils" class="w-4 h-4 inline mr-2"></i> Catering</a>
+                            <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="inline-block bg-orange-600 hover:bg-orange-700 text-white font-bold py-3 px-6 rounded-lg transition-all text-center"><i data-lucide="utensils" class="w-4 h-4 inline mr-2"></i> Catering</a>
                             <a href="https://www.facebook.com/profile.php?id=100063717936123" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center gap-2 bg-blue-600 hover:bg-blue-500 text-white font-bold py-3 px-6 rounded-lg transition-all">
                                 <i data-lucide="facebook" class="w-5 h-5"></i> Follow Us
                             </a>
