--- a/league-city.html
+++ b/league-city.html
@@ -101,7 +101,7 @@
             </ul>
             <div class="my-4 border-t border-white/10"></div>
             <ul class="space-y-1">
-                <li><a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-bold uppercase text-sm tracking-wide rounded-lg bg-gradient-to-r from-red-600 to-red-700 hover:from-red-500 hover:to-red-600 transition-all"><i data-lucide="shopping-cart" class="w-5 h-5"></i> Order Online</a></li>
+                <li><button onclick="openOrderModal(); closeMobileMenu();" class="w-full text-left flex items-center gap-3 px-4 py-3 text-white font-bold uppercase text-sm tracking-wide rounded-lg bg-gradient-to-r from-red-600 to-red-700 hover:from-red-500 hover:to-red-600 transition-all"><i data-lucide="shopping-cart" class="w-5 h-5"></i> Order Online</button></li>
                 <li><a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-bold uppercase text-sm tracking-wide rounded-lg hover:bg-white/10 transition-all"><i data-lucide="gift" class="w-5 h-5 text-yellow-500"></i> Gift Cards</a></li>
                 <li><a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-bold uppercase text-sm tracking-wide rounded-lg hover:bg-white/10 transition-all"><i data-lucide="mail" class="w-5 h-5 text-yellow-500"></i> E-Club</a></li>
                 <li><a href="https://www.toasttab.com/red-river-bbq-league-city-1911-e-main-st-suite-b/rewardsSignup" target="_blank" rel="noopener noreferrer" class="flex items-center gap-3 px-4 py-3 text-white font-bold uppercase text-sm tracking-wide rounded-lg hover:bg-white/10 transition-all"><i data-lucide="trophy" class="w-5 h-5 text-yellow-500"></i> Rewards</a></li>
@@ -144,7 +144,7 @@
                         <h2 class="font-oswald text-2xl font-bold text-gray-800 mb-4">Quick Links</h2>
                         <div class="flex flex-col gap-3">
                             <a href="#" class="inline-block bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-6 rounded-lg transition-all text-center">View Menu</a>
-                            <a href="#" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition-all text-center"><i data-lucide="shopping-cart" class="w-4 h-4 inline mr-2"></i> Order Online</a>
+                            <button onclick="openOrderModal()" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition-all text-center"><i data-lucide="shopping-cart" class="w-4 h-4 inline mr-2"></i> Order Online</button>
                             <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="inline-block bg-orange-600 hover:bg-orange-700 text-white font-bold py-3 px-6 rounded-lg transition-all text-center"><i data-lucide="utensils" class="w-4 h-4 inline mr-2"></i> Catering</a>
                             <a href="https://www.facebook.com/profile.php?id=100063717936123" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center gap-2 bg-blue-600 hover:bg-blue-500 text-white font-bold py-3 px-6 rounded-lg transition-all">
                                 <i data-lucide="facebook" class="w-5 h-5"></i> Follow Us
