--- a/locations.html
+++ b/locations.html
@@ -25,6 +25,11 @@
         .btn-outline-modern::before { content: ''; position: absolute; top: 0; left: 0; width: 0; height: 100%; background: #fff; transition: width 0.4s cubic-bezier(0.4, 0, 0.2, 1); z-index: -1; }
         .btn-outline-modern:hover::before { width: 100%; }
         .btn-outline-modern:hover { color: #1a1a1a; transform: scale(1.05); }
+        @keyframes scaleIn {
+            from { opacity: 0; transform: scale(0.95); }
+            to { opacity: 1; transform: scale(1); }
+        }
+        .animate-scale-in { animation: scaleIn 0.2s ease-out; }
     </style>
 </head>
 <body class="bg-gray-100 overflow-x-hidden min-h-screen flex flex-col">
@@ -34,7 +39,7 @@
         <div class="hidden md:block bg-gradient-to-r from-[#cc0000] via-[#dd1111] to-[#cc0000] border-b-4 border-[#880000] shadow-lg">
             <div class="max-w-7xl mx-auto flex justify-end items-center py-2 px-4 text-white text-[11px] font-bold uppercase tracking-wider space-x-6">
                 <a href="#" class="flex items-center hover:scale-110 transition-transform duration-300 whitespace-nowrap group">GIFT CARDS <i data-lucide="gift" class="ml-1 w-4 h-4 group-hover:animate-bounce"></i></a>
-                <a href="#" class="flex items-center hover:scale-110 transition-transform duration-300 whitespace-nowrap group">ORDER ONLINE <i data-lucide="shopping-cart" class="ml-1 w-4 h-4 group-hover:animate-bounce"></i></a>
+                <button onclick="openOrderModal()" class="flex items-center hover:scale-110 transition-transform duration-300 whitespace-nowrap group bg-transparent border-none cursor-pointer text-white">ORDER ONLINE <i data-lucide="shopping-cart" class="ml-1 w-4 h-4 group-hover:animate-bounce"></i></button>
                 <a href="#" class="flex items-center hover:scale-110 transition-transform duration-300 whitespace-nowrap group">E-CLUB <i data-lucide="mail" class="ml-1 w-4 h-4 group-hover:animate-bounce"></i></a>
                 <a href="https://www.toasttab.com/red-river-bbq-league-city-1911-e-main-st-suite-b/rewardsSignup" target="_blank" rel="noopener noreferrer" class="flex items-center hover:scale-110 transition-transform duration-300 whitespace-nowrap group">REWARDS <i data-lucide="trophy" class="ml-1 w-4 h-4 group-hover:animate-bounce"></i></a>
             </div>
@@ -88,7 +93,7 @@
             </ul>
             <div class="my-4 border-t border-white/10"></div>
             <ul class="space-y-1">
-                <li><a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-bold uppercase text-sm tracking-wide rounded-lg bg-gradient-to-r from-red-600 to-red-700 hover:from-red-500 hover:to-red-600 transition-all"><i data-lucide="shopping-cart" class="w-5 h-5"></i> Order Online</a></li>
+                <li><button onclick="openOrderModal(); closeMobileMenu();" class="w-full text-left flex items-center gap-3 px-4 py-3 text-white font-bold uppercase text-sm tracking-wide rounded-lg bg-gradient-to-r from-red-600 to-red-700 hover:from-red-500 hover:to-red-600 transition-all"><i data-lucide="shopping-cart" class="w-5 h-5"></i> Order Online</button></li>
                 <li><a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-bold uppercase text-sm tracking-wide rounded-lg hover:bg-white/10 transition-all"><i data-lucide="gift" class="w-5 h-5 text-yellow-500"></i> Gift Cards</a></li>
                 <li><a href="#" class="flex items-center gap-3 px-4 py-3 text-white font-bold uppercase text-sm tracking-wide rounded-lg hover:bg-white/10 transition-all"><i data-lucide="mail" class="w-5 h-5 text-yellow-500"></i> E-Club</a></li>
                 <li><a href="https://www.toasttab.com/red-river-bbq-league-city-1911-e-main-st-suite-b/rewardsSignup" target="_blank" rel="noopener noreferrer" class="flex items-center gap-3 px-4 py-3 text-white font-bold uppercase text-sm tracking-wide rounded-lg hover:bg-white/10 transition-all"><i data-lucide="trophy" class="w-5 h-5 text-yellow-500"></i> Rewards</a></li>
@@ -252,6 +257,43 @@
         </div>
     </footer>
 
+    <!-- Order Modal -->
+    <div id="orderModal" class="fixed inset-0 z-50 flex items-center justify-center p-4 hidden">
+        <!-- Backdrop -->
+        <div class="fixed inset-0 bg-black/50 z-40" onclick="closeOrderModal()"></div>
+        
+        <!-- Modal Content -->
+        <div class="bg-white rounded-lg shadow-2xl max-w-md w-full z-50 animate-scale-in">
+            <!-- Header -->
+            <div class="bg-[#cc0000] px-6 py-4 flex justify-between items-center rounded-t-lg">
+                <h2 class="text-white font-oswald font-bold text-2xl uppercase">
+                    ORDER ONLINE
+                </h2>
+                <button onclick="closeOrderModal()" class="text-white hover:bg-[#880000] p-1 rounded transition-colors">
+                    <i data-lucide="x" class="w-6 h-6"></i>
+                </button>
+            </div>
+
+            <!-- Content -->
+            <div class="p-6">
+                <div class="space-y-3">
+                    <a href="https://order.redriverrestaurants.com/order/red-river-bbq-league-city-1911-e-main-st-suite-b" class="block w-full px-4 py-3 border-b-2 border-gray-300 text-[#cc0000] font-oswald font-bold uppercase text-center hover:bg-red-50 transition-colors" target="_blank" rel="noopener noreferrer">
+                        LEAGUE CITY | PICK-UP
+                    </a>
+                    <a href="https://order.online/store/red-river-bbq-grill-league-city-72318?hideModal=true&amp;pickup=true" class="block w-full px-4 py-3 border-b-2 border-gray-300 text-[#cc0000] font-oswald font-bold uppercase text-center hover:bg-red-50 transition-colors" target="_blank" rel="noopener noreferrer">
+                        LEAGUE CITY | DELIVERY
+                    </a>
+                    <a href="https://order.redriverrestaurants.com/order/red-river-bbq-katy-1711-s-mason" class="block w-full px-4 py-3 border-b-2 border-gray-300 text-[#cc0000] font-oswald font-bold uppercase text-center hover:bg-red-50 transition-colors" target="_blank" rel="noopener noreferrer">
+                        KATY | PICK-UP
+                    </a>
+                    <a href="https://www.doordash.com/store/red-river-bbq-&-burger-katy-54597/20035367/?event_type=autocomplete&amp;pickup=false" class="block w-full px-4 py-3 text-[#cc0000] font-oswald font-bold uppercase text-center hover:bg-red-50 transition-colors" target="_blank" rel="noopener noreferrer">
+                        KATY | DELIVERY
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Scroll to top button -->
     <button id="scroll-to-top" class="fixed bottom-8 right-4 md:right-8 w-12 h-12 bg-gradient-to-br from-red-600 to-red-800 text-white rounded-full shadow-lg hover:shadow-red-500/50 transition-all duration-300 opacity-0 pointer-events-none translate-y-4 flex items-center justify-center hover:scale-110 z-50" title="Go to top">
         <i data-lucide="chevron-up" class="w-6 h-6"></i>
@@ -261,6 +303,23 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
         lucide.createIcons();
+
+        // Order modal controls
+        function openOrderModal() {
+            const modal = document.getElementById('orderModal');
+            modal.classList.remove('hidden');
+            lucide.createIcons();
+        }
+
+        function closeOrderModal() {
+            const modal = document.getElementById('orderModal');
+            modal.classList.add('hidden');
+        }
+
+        document.addEventListener('keydown', (e) => {
+            if (e.key === 'Escape') closeOrderModal();
+        });
+
         const scrollBtn = document.getElementById('scroll-to-top');
         window.addEventListener('scroll', () => {
             if (window.scrollY > 300) {
