--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         ],
         "servesCuisine": ["BBQ", "Barbecue", "Texas BBQ", "American"],
         "priceRange": "$$",
-        "hasMenu": "https://redriverbbq.com/menu/",
+        "hasMenu": "https://redriverbbq.com/menu.html",
         "acceptsReservations": "false",
-        "menu": "https://redriverbbq.com/menu/",
+        "menu": "https://redriverbbq.com/menu.html",
         "image": [
             "https://redriverbbq.com/images/RRBBQBrand.png",
             "https://redriverbbq.com/images/RedRiverBBQ&Grill-BBQ.jpg"
@@ -462,7 +462,7 @@
                 <nav class="hidden md:flex flex-col items-end animate-fadeInDown delay-200" style="opacity: 0; animation-fill-mode: forwards;">
                     <ul class="flex gap-x-6 text-white font-oswald font-bold uppercase text-base tracking-wide">
                         <li><a href="#location" class="nav-link hover:text-yellow-400 transition-all duration-300">LOCATION</a></li>
-                        <li><a href="/menu/" class="nav-link hover:text-yellow-400 transition-all duration-300">MENU</a></li>
+                        <li><a href="menu.html" class="nav-link hover:text-yellow-400 transition-all duration-300">MENU</a></li>
                         <li><a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="nav-link hover:text-yellow-400 transition-all duration-300">CATERING</a></li>
                         <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">PARTY ROOM</a></li>
                         <li><a href="#" class="nav-link hover:text-yellow-400 transition-all duration-300">CAREERS</a></li>
@@ -505,7 +505,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/menu/" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all">
+                    <a href="menu.html" class="flex items-center gap-3 px-4 py-3 text-white font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-white/10 transition-all">
                         <i data-lucide="book-open" class="w-5 h-5 text-red-500"></i>
                         Menu
                     </a>
@@ -726,7 +726,7 @@
                     <i data-lucide="link" class="w-5 h-5 text-red-500"></i>
                 </div>
                 <div class="flex flex-col space-y-3">
-                    <a href="/menu/" class="text-sm hover:text-white transition-colors">Menu</a>
+                    <a href="menu.html" class="text-sm hover:text-white transition-colors">Menu</a>
                     <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="text-sm hover:text-white transition-colors">Catering</a>
                     <a href="#" onclick="openOrderModal(); return false;" class="text-sm hover:text-white transition-colors">Order Online</a>
                     <a href="https://www.toasttab.com/red-river-bbq-league-city-1911-e-main-st-suite-b/giftcards" target="_blank" rel="noopener noreferrer" class="text-sm hover:text-white transition-colors">Gift Cards</a>
