--- a/order.html
+++ b/order.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Online • Red River BBQ & Grill</title>
     <meta name="description" content="Order Red River BBQ & Grill online for pickup or delivery in League City.">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background: #f5f5f5; }
+        body { font-family: 'Open Sans', sans-serif; background: #f5f5f5; }
+        h1, h2, h3, h4, .font-oswald { font-family: 'Oswald', sans-serif; }
         .header { background: #000; padding: 20px; text-align: center; }
         .logo { height: 60px; }
         .container { max-width: 600px; margin: 40px auto; padding: 0 20px; }
@@ -40,5 +42,77 @@
             <a href="index.html" class="back-link">← Back to Home</a>
         </div>
     </div>
+
+    <!-- FOOTER SECTION -->
+    <footer class="bg-gray-900 py-20 px-4 text-gray-300 mt-12">
+        <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
+            <!-- Location Info -->
+            <div class="bg-gray-800/50 rounded-2xl p-6 text-center md:text-left">
+                <div class="flex items-center justify-center md:justify-start gap-2 mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#cc0000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>
+                    <h3 class="text-white font-bold text-sm uppercase">Visit Us</h3>
+                </div>
+                <p class="text-sm font-bold text-red-400 mb-2">Red River BBQ & Grill</p>
+                <p class="text-sm">281.332.8086</p>
+                <p class="text-sm italic mt-2 text-gray-400">1911 E. Main St.</p>
+                <p class="text-sm italic text-gray-400">League City, TX 77573</p>
+                <div class="mt-4 pt-4 border-t border-white/10">
+                    <h4 class="text-white font-bold text-xs uppercase mb-2">Hours:</h4>
+                    <p class="text-xs"><span class="text-yellow-400">Sun-Thu:</span> 11am-9pm</p>
+                    <p class="text-xs"><span class="text-yellow-400">Fri-Sat:</span> 11am-9:30pm</p>
+                </div>
+                <a href="https://www.facebook.com/profile.php?id=100063717936123" target="_blank" rel="noopener noreferrer" class="mt-4 inline-flex items-center gap-2 bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded-full text-white text-xs transition-all">
+                    Follow Us on Facebook
+                </a>
+            </div>
+
+            <!-- Rewards Box -->
+            <div class="bg-gray-800/50 rounded-2xl p-8 text-center">
+                <div class="w-16 h-16 bg-gradient-to-br from-yellow-500 to-orange-600 rounded-full flex items-center justify-center mx-auto mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2"><rect x="3" y="8" width="18" height="4" rx="1"/><path d="M12 8v13"/><path d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7"/><path d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5"/></svg>
+                </div>
+                <h3 class="text-white font-oswald text-2xl uppercase font-bold mb-2">Rewards Program</h3>
+                <p class="text-sm text-gray-300 mb-4">Earn points, unlock rewards, get a birthday bonus!</p>
+                <a href="https://www.toasttab.com/red-river-bbq-league-city-1911-e-main-st-suite-b/rewardsSignup" target="_blank" rel="noopener noreferrer" class="inline-block px-6 py-3 text-sm font-bold uppercase border-2 border-white text-white hover:bg-white hover:text-gray-900 transition-all rounded-lg">
+                    Join Now
+                </a>
+            </div>
+
+            <!-- Quick Links -->
+            <div class="bg-gray-800/50 rounded-2xl p-6 text-center md:text-right">
+                <div class="flex items-center justify-center md:justify-end gap-2 mb-4">
+                    <h3 class="text-white font-bold text-sm uppercase">Quick Links</h3>
+                </div>
+                <div class="flex flex-col space-y-3">
+                    <a href="menu.html" class="text-sm hover:text-white transition-colors">Menu</a>
+                    <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="text-sm hover:text-white transition-colors">Catering</a>
+                    <a href="order.html" class="text-sm hover:text-white transition-colors">Order Online</a>
+                    <a href="https://www.toasttab.com/red-river-bbq-league-city-1911-e-main-st-suite-b/giftcards" target="_blank" rel="noopener noreferrer" class="text-sm hover:text-white transition-colors">Gift Cards</a>
+                    <a href="#" class="text-sm hover:text-white transition-colors">Careers</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Logo -->
+        <div class="mt-20 flex justify-center border-t border-white/10 pt-16">
+            <a href="index.html">
+                <img src="images/RRBBQBrand.png" alt="Red River BBQ & Grill" class="h-32 md:h-40 w-auto hover:scale-110 transition-transform">
+            </a>
+        </div>
+
+        <!-- Social Links -->
+        <div class="mt-12 flex flex-wrap justify-center gap-4">
+            <a href="#" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">Careers</a>
+            <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">Catering</a>
+            <a href="#" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">Community</a>
+            <a href="#" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">E-Club</a>
+        </div>
+
+        <!-- Copyright -->
+        <div class="mt-12 text-center text-xs text-gray-500 uppercase tracking-widest">
+            &copy; 2024 Red River BBQ & Grill. All Rights Reserved.
+            <p class="mt-2 text-gray-600 normal-case tracking-normal">Made with <span class="text-red-500">♥</span> in Texas</p>
+        </div>
+    </footer>
 </body>
 </html>
