hero images , menu update , careers

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
         <section class="relative h-[400px] md:h-[700px] w-full overflow-hidden" id="hero">
             <!-- Parallax Background Image -->
             <img 
-                src="images/Red%20River%20BBQ%20%26%20Grill%20Hero%20image%20food.png" 
+                src="images/RedRiverBBQ&Grill-locationshero.jpg" 
                 alt="Red River BBQ & Grill Delicious Food" 
                 class="hero-image w-full h-full object-cover scale-110"
                 id="hero-image"
