--- a/menu.html
+++ b/menu.html
@@ -466,7 +466,7 @@
         <!-- HERO SECTION -->
         <section class="relative h-[300px] md:h-[400px] w-full overflow-hidden">
             <img 
-                src="images/RedRiverBBQ&Grill-BBQ.jpg" 
+                src="images/Red River BBQ & Grill Hero image food.png" 
                 alt="Red River BBQ Menu" 
                 class="w-full h-full object-cover"
             />
@@ -507,6 +507,10 @@
                         <span class="price-tag">$12.99</span>
                     </div>
                     <div class="menu-item">
+                        <div><h3>Smoked Turkey Breast</h3><p>Tender turkey breast with smoky flavor</p></div>
+                        <span class="price-tag">$13.99</span>
+                    </div>
+                    <div class="menu-item">
                         <div><h3>Two Meat Combo</h3><p>Choose any two meats from our selection</p></div>
                         <span class="price-tag">$18.99</span>
                     </div>
@@ -528,8 +532,16 @@
                         <span class="price-tag">$9.99</span>
                     </div>
                     <div class="menu-item">
-                        <div><h3>BBQ Sausage Link</h3><p>Smoked sausage link on a toasted bun</p></div>
+                        <div><h3>BBQ Sausage Sandwich</h3><p>Smoked sausage link on a toasted bun</p></div>
                         <span class="price-tag">$8.99</span>
+                    </div>
+                    <div class="menu-item">
+                        <div><h3>Tri-Tip Sandwich</h3><p>Sliced tri-tip beef on a toasted bun</p></div>
+                        <span class="price-tag">$11.99</span>
+                    </div>
+                    <div class="menu-item">
+                        <div><h3>Turkey Sandwich</h3><p>Smoked turkey breast on a toasted bun</p></div>
+                        <span class="price-tag">$9.99</span>
                     </div>
                 </section>
 
@@ -544,6 +556,56 @@
                         <div class="side-item"><h3>Onion Rings</h3><span style="color: #cc0000; font-weight: bold;">$4.99</span></div>
                         <div class="side-item"><h3>Green Beans</h3><span style="color: #cc0000; font-weight: bold;">$3.99</span></div>
                         <div class="side-item"><h3>Corn on the Cob</h3><span style="color: #cc0000; font-weight: bold;">$3.99</span></div>
+                        <div class="side-item"><h3>Cornbread</h3><span style="color: #cc0000; font-weight: bold;">$2.99</span></div>
+                        <div class="side-item"><h3>Mashed Potatoes</h3><span style="color: #cc0000; font-weight: bold;">$3.99</span></div>
+                        <div class="side-item"><h3>Baked Beans</h3><span style="color: #cc0000; font-weight: bold;">$3.99</span></div>
+                        <div class="side-item"><h3>Cole Slaw Combo</h3><span style="color: #cc0000; font-weight: bold;">$4.99</span></div>
+                    </div>
+                </section>
+
+                <section class="menu-category">
+                    <h2>Appetizers & Specials</h2>
+                    <div class="menu-item">
+                        <div><h3>Smoked Brisket Nachos</h3><p>Crispy tortilla chips topped with brisket, cheese, jalapeños, and sour cream</p></div>
+                        <span class="price-tag">$11.99</span>
+                    </div>
+                    <div class="menu-item">
+                        <div><h3>BBQ Ribs Starter</h3><p>Half pound of our signature smoked ribs</p></div>
+                        <span class="price-tag">$12.99</span>
+                    </div>
+                    <div class="menu-item">
+                        <div><h3>Smoked Turkey Legs</h3><p>Authentic smoked turkey leg with side of BBQ sauce</p></div>
+                        <span class="price-tag">$9.99</span>
+                    </div>
+                    <div class="menu-item">
+                        <div><h3>BBQ Sampler Platter</h3><p>A taste of our best - brisket, ribs, and pulled pork with two sides</p></div>
+                        <span class="price-tag">$24.99</span>
+                    </div>
+                </section>
+
+                <section class="menu-category">
+                    <h2>Beverages</h2>
+                    <div class="sides-grid">
+                        <div class="side-item"><h3>Soft Drinks</h3><span style="color: #cc0000; font-weight: bold;">$2.49</span></div>
+                        <div class="side-item"><h3>Iced Tea</h3><span style="color: #cc0000; font-weight: bold;">$2.49</span></div>
+                        <div class="side-item"><h3>Bottled Water</h3><span style="color: #cc0000; font-weight: bold;">$1.99</span></div>
+                        <div class="side-item"><h3>Coffee</h3><span style="color: #cc0000; font-weight: bold;">$2.29</span></div>
+                    </div>
+                </section>
+
+                <section class="menu-category">
+                    <h2>Desserts</h2>
+                    <div class="menu-item">
+                        <div><h3>Peach Cobbler</h3><p>Warm, homemade peach cobbler with vanilla ice cream</p></div>
+                        <span class="price-tag">$4.99</span>
+                    </div>
+                    <div class="menu-item">
+                        <div><h3>Brownies</h3><p>Fresh baked chocolate brownies</p></div>
+                        <span class="price-tag">$3.99</span>
+                    </div>
+                    <div class="menu-item">
+                        <div><h3>Banana Pudding</h3><p>Traditional creamy banana pudding</p></div>
+                        <span class="price-tag">$4.49</span>
                     </div>
                 </section>
 
