--- a/party-room.html
+++ b/party-room.html
@@ -415,12 +415,14 @@
     <main class="flex-grow">
         <!-- HERO SECTION -->
         <section class="relative h-[300px] md:h-[500px] w-full overflow-hidden">
-            <!-- Gradient Background -->
-            <div class="absolute inset-0 bg-gradient-to-br from-[#1a1a1a] via-[#2a2a2a] to-[#1a1a1a]"></div>
-            <div class="absolute inset-0 diagonal-stripes opacity-30"></div>
+            <img 
+                src="images/Red-River-BBQ-Party-Room.png" 
+                alt="Red River BBQ Party Room" 
+                class="w-full h-full object-cover"
+            />
+            <div class="absolute inset-0 bg-gradient-to-b from-black/60 via-black/30 to-black/70"></div>
             
-            <!-- Content -->
-            <div class="relative z-10 h-full flex items-center justify-center text-center px-4">
+            <div class="absolute inset-0 flex items-center justify-center text-center px-4">
                 <div class="max-w-4xl mx-auto">
                     <h1 class="text-4xl md:text-6xl lg:text-7xl font-oswald font-bold text-white mb-4 animate-fadeInDown">
                         PARTY ROOM
