--- a/careers.html
+++ b/careers.html
@@ -1126,33 +1126,53 @@
                 </a>
             </div>
 
-            <!-- Quick Links -->
-            <div class="reveal card-hover glass rounded-2xl p-6 text-center md:text-right">
-                <div class="flex items-center justify-center md:justify-end gap-2 mb-4">
-                    <h3 class="text-white font-bold text-sm uppercase">Quick Links</h3>
-                    <i data-lucide="link" class="w-5 h-5 text-red-500"></i>
-                </div>
-                <div class="flex flex-col space-y-3">
-                    <a href="menu.html" class="text-sm hover:text-white transition-colors">Menu</a>
-                    <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="text-sm hover:text-white transition-colors">Catering</a>
-                    <a href="#" onclick="openOrderModal(); return false;" class="text-sm hover:text-white transition-colors">Order Online</a>
-                    <a href="https://order.toasttab.com/egiftcards/red-river-bbq-league-city-1911-e-main-st-suite-b" target="_blank" rel="noopener noreferrer" class="text-sm hover:text-white transition-colors">Gift Cards</a>
-                    <a href="./careers.html" class="text-sm hover:text-white transition-colors">Careers</a>
-                </div>
+            <!-- Google Map -->
+            <div class="reveal glass rounded-2xl overflow-hidden shadow-2xl">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.1234567!2d-95.4849!3d29.5429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640d5f5f5f5f5f5%3A0x1234567890!2s1911%20E%20Main%20St%2C%20League%20City%2C%20TX%2077573!5e0!3m2!1sen!2sus!4v1643567890123" width="100%" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
 
         <!-- Bottom Logos Section -->
         <div class="reveal mt-20 flex justify-center items-center border-t border-white/10 pt-16">
-            <!-- Main BBQ Logo -->
-            <div class="flex flex-col items-center group cursor-pointer">
-                <a href="index.html" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
-                    <img 
-                        src="images/RRBBQBrand.png" 
-                        alt="Red River BBQ & Grill" 
-                        class="h-32 md:h-40 w-auto"
-                    />
-                </a>
+            <div class="flex flex-wrap justify-center items-end gap-8 md:gap-12">
+                <!-- Red River BBQ League City -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="index.html" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/RRBBQBrand.png" alt="Red River BBQ & Grill - League City" class="h-24 md:h-28 w-auto" />
+                    </a>
+                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">League City</p>
+                </div>
+
+                <!-- Brand League City TX -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="league-city.html" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/brand.png" alt="Location - League City TX" class="h-24 md:h-28 w-auto" />
+                    </a>
+                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">League City TX</p>
+                </div>
+
+                <!-- Brand Richmond TX -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="#" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/brand.png" alt="Location - Richmond TX" class="h-24 md:h-28 w-auto" />
+                    </a>
+                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">Richmond TX</p>
+                </div>
+
+                <!-- BBQ Burger Upscale Katy TX -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="#" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/BBQ BURGER UPSCALE trans.png" alt="BBQ Burger Upscale - Katy TX" class="h-24 md:h-28 w-auto" />
+                    </a>
+                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">Katy TX</p>
+                </div>
+
+                <!-- Kiersh Co -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/Kiersh-Co-Transparent-PNG.png" alt="Kiersh Catering" class="h-24 md:h-28 w-auto" />
+                    </a>
+                </div>
             </div>
         </div>
 
