--- a/locations.html
+++ b/locations.html
@@ -210,27 +210,46 @@
         </div>
 
         <!-- Bottom Logos Section -->
-        <div class="reveal mt-20 flex flex-col md:flex-row justify-center items-center gap-16 border-t border-white/10 pt-16">
-            <!-- Main BBQ Logo -->
-            <div class="flex flex-col items-center group cursor-pointer">
-                <a href="#" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
-                    <img 
-                        src="images/RRBBQBrand.png" 
-                        alt="Red River Bar-B-Que & Grill" 
-                        class="h-32 md:h-40 w-auto"
-                    />
-                </a>
-            </div>
+        <div class="reveal mt-20 flex justify-center items-center border-t border-white/10 pt-16">
+            <div class="flex flex-wrap justify-center items-end gap-8 md:gap-12">
+                <!-- Red River BBQ League City -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="index.html" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/RRBBQBrand.png" alt="Red River BBQ & Grill - League City" class="h-24 md:h-28 w-auto" />
+                    </a>
+                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">League City</p>
+                </div>
 
-            <!-- Cantina Logo -->
-            <div class="flex flex-col items-center group cursor-pointer">
-                <a href="#" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(0,167,157,0.5)]">
-                    <img 
-                        src="images/brand.png" 
-                        alt="Red River Cantina" 
-                        class="h-32 md:h-40 w-auto"
-                    />
-                </a>
+                <!-- Brand League City TX -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="league-city.html" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/brand.png" alt="Location - League City TX" class="h-24 md:h-28 w-auto" />
+                    </a>
+                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">League City TX</p>
+                </div>
+
+                <!-- Brand Richmond TX -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="#" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/brand.png" alt="Location - Richmond TX" class="h-24 md:h-28 w-auto" />
+                    </a>
+                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">Richmond TX</p>
+                </div>
+
+                <!-- BBQ Burger Upscale Katy TX -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="#" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/BBQ BURGER UPSCALE trans.png" alt="BBQ Burger Upscale - Katy TX" class="h-24 md:h-28 w-auto" />
+                    </a>
+                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">Katy TX</p>
+                </div>
+
+                <!-- Kiersh Co -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/Kiersh-Co-Transparent-PNG.png" alt="Kiersh Catering" class="h-24 md:h-28 w-auto" />
+                    </a>
+                </div>
             </div>
         </div>
 
