--- a/index.html
+++ b/index.html
@@ -642,6 +642,37 @@
                 <p class="reveal text-gray-600 leading-relaxed text-lg md:text-xl mb-10 max-w-3xl mx-auto">
                     Our original location in League City since 2002. We offer a family friendly dining experience with a large dining room, private banquet rooms, outdoor dining and a play area for kids to enjoy. Come enjoy some Texas bar-b-que and home cooking! We also offer catering for any type of event & size. See our catering menu for more details. See you soon!
                 </p>
+
+                <!-- Frank Santos & Map Section -->
+                <div class="reveal grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
+                    <!-- Frank Santos -->
+                    <div class="card-hover bg-white rounded-2xl p-8 shadow-lg border border-gray-100 flex flex-col items-center justify-center">
+                        <img src="images/FrankSantos-league-city-RedRiverBBQ.png" alt="Frank Santos, General Manager" class="w-full h-auto rounded-lg mb-6 object-cover">
+                        <h3 class="font-oswald text-2xl font-bold text-gray-800">Frank Santos</h3>
+                        <p class="text-red-600 font-bold uppercase tracking-wider">General Manager</p>
+                    </div>
+
+                    <!-- Map and Quick Links -->
+                    <div class="flex flex-col h-full">
+                        <!-- Google Map -->
+                        <div class="reveal rounded-2xl overflow-hidden shadow-2xl flex-1 mb-4">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.1234567!2d-95.4849!3d29.5429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640d5f5f5f5f5f5%3A0x1234567890!2s1911%20E%20Main%20St%2C%20League%20City%2C%20TX%2077573!5e0!3m2!1sen!2sus!4v1643567890123" width="100%" height="100%" style="border:0; min-height: 280px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+
+                        <!-- Quick Links -->
+                        <div class="reveal card-hover bg-white rounded-2xl p-5 text-center shadow-lg border border-gray-100">
+                            <h3 class="text-gray-800 font-bold text-xs uppercase mb-3 flex items-center justify-center gap-2">
+                                <i data-lucide="link" class="w-4 h-4 text-red-500"></i> Quick Links
+                            </h3>
+                            <div class="flex flex-wrap justify-center gap-2">
+                                <a href="menu.html" class="text-xs hover:text-red-600 transition-colors bg-gray-100 hover:bg-red-50 px-3 py-1.5 rounded-full">Menu</a>
+                                <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="text-xs hover:text-red-600 transition-colors bg-gray-100 hover:bg-red-50 px-3 py-1.5 rounded-full">Catering</a>
+                                <a href="#" onclick="openOrderModal(); return false;" class="text-xs hover:text-red-600 transition-colors bg-gray-100 hover:bg-red-50 px-3 py-1.5 rounded-full">Order</a>
+                                <a href="./careers.html" class="text-xs hover:text-red-600 transition-colors bg-gray-100 hover:bg-red-50 px-3 py-1.5 rounded-full">Careers</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 
                 <!-- Feature Cards -->
                 <div class="reveal grid grid-cols-1 md:grid-cols-3 gap-6 mt-12">
@@ -719,33 +750,53 @@
                 </a>
             </div>
 
-            <!-- Quick Links -->
-            <div class="reveal card-hover glass rounded-2xl p-6 text-center md:text-right">
-                <div class="flex items-center justify-center md:justify-end gap-2 mb-4">
-                    <h3 class="text-white font-bold text-sm uppercase">Quick Links</h3>
-                    <i data-lucide="link" class="w-5 h-5 text-red-500"></i>
-                </div>
-                <div class="flex flex-col space-y-3">
-                    <a href="menu.html" class="text-sm hover:text-white transition-colors">Menu</a>
-                    <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="text-sm hover:text-white transition-colors">Catering</a>
-                    <a href="#" onclick="openOrderModal(); return false;" class="text-sm hover:text-white transition-colors">Order Online</a>
-                    <a href="https://order.toasttab.com/egiftcards/red-river-bbq-league-city-1911-e-main-st-suite-b" target="_blank" rel="noopener noreferrer" class="text-sm hover:text-white transition-colors">Gift Cards</a>
-                    <a href="./careers.html" class="text-sm hover:text-white transition-colors">Careers</a>
-                </div>
+            <!-- Google Map -->
+            <div class="reveal glass rounded-2xl overflow-hidden shadow-2xl">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.1234567!2d-95.4849!3d29.5429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640d5f5f5f5f5f5%3A0x1234567890!2s1911%20E%20Main%20St%2C%20League%20City%2C%20TX%2077573!5e0!3m2!1sen!2sus!4v1643567890123" width="100%" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
 
         <!-- Bottom Logos Section -->
         <div class="reveal mt-20 flex justify-center items-center border-t border-white/10 pt-16">
-            <!-- Main BBQ Logo -->
-            <div class="flex flex-col items-center group cursor-pointer">
-                <a href="#" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
-                    <img 
-                        src="images/RRBBQBrand.png" 
-                        alt="Red River BBQ & Grill" 
-                        class="h-32 md:h-40 w-auto"
-                    />
-                </a>
+            <div class="flex flex-wrap justify-center items-end gap-8 md:gap-12">
+                <!-- Red River BBQ League City -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="index.html" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/RRBBQBrand.png" alt="Red River BBQ & Grill - League City" class="h-24 md:h-28 w-auto" />
+                    </a>
+                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">League City</p>
+                </div>
+
+                <!-- Brand League City TX -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="league-city.html" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/brand.png" alt="Location - League City TX" class="h-24 md:h-28 w-auto" />
+                    </a>
+                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">League City TX</p>
+                </div>
+
+                <!-- Brand Richmond TX -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="#" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/brand.png" alt="Location - Richmond TX" class="h-24 md:h-28 w-auto" />
+                    </a>
+                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">Richmond TX</p>
+                </div>
+
+                <!-- BBQ Burger Upscale Katy TX -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="#" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/BBQ BURGER UPSCALE trans.png" alt="BBQ Burger Upscale - Katy TX" class="h-24 md:h-28 w-auto" />
+                    </a>
+                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">Katy TX</p>
+                </div>
+
+                <!-- Kiersh Co -->
+                <div class="flex flex-col items-center group cursor-pointer">
+                    <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                        <img src="images/Kiersh-Co-Transparent-PNG.png" alt="Kiersh Catering" class="h-24 md:h-28 w-auto" />
+                    </a>
+                </div>
             </div>
         </div>
 
