--- a/order.html
+++ b/order.html
@@ -78,18 +78,9 @@
                 </a>
             </div>
 
-            <!-- Quick Links -->
-            <div class="bg-gray-800/50 rounded-2xl p-6 text-center md:text-right">
-                <div class="flex items-center justify-center md:justify-end gap-2 mb-4">
-                    <h3 class="text-white font-bold text-sm uppercase">Quick Links</h3>
-                </div>
-                <div class="flex flex-col space-y-3">
-                    <a href="menu.html" class="text-sm hover:text-white transition-colors">Menu</a>
-                    <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="text-sm hover:text-white transition-colors">Catering</a>
-                    <a href="order.html" class="text-sm hover:text-white transition-colors">Order Online</a>
-                    <a href="https://order.toasttab.com/egiftcards/red-river-bbq-league-city-1911-e-main-st-suite-b" target="_blank" rel="noopener noreferrer" class="text-sm hover:text-white transition-colors">Gift Cards</a>
-                    <a href="./careers.html" class="text-sm hover:text-white transition-colors">Careers</a>
-                </div>
+            <!-- Google Map -->
+            <div class="reveal glass rounded-2xl overflow-hidden shadow-2xl">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.1234567!2d-95.4849!3d29.5429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640d5f5f5f5f5f5%3A0x1234567890!2s1911%20E%20Main%20St%2C%20League%20City%2C%20TX%2077573!5e0!3m2!1sen!2sus!4v1643567890123" width="100%" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
 
