--- a/community.html
+++ b/community.html
@@ -528,18 +528,18 @@
 
         <!-- Bottom Logos Section -->
         <div class="reveal mt-20 flex justify-center items-center border-t border-white/10 pt-16">
-            <div class="flex flex-wrap justify-center items-end gap-8 md:gap-12">
+            <div class="flex flex-wrap md:flex-nowrap justify-center md:justify-between items-end gap-8 md:gap-12 w-full max-w-6xl">
                 <!-- Red River BBQ League City -->
                 <div class="flex flex-col items-center group cursor-pointer">
                     <a href="index.html" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
                         <img src="images/RRBBQBrand.png" alt="Red River BBQ & Grill - League City" class="h-24 md:h-28 w-auto" />
                     </a>
-                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">League City</p>
+                    <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">League City TX</p>
                 </div>
 
                 <!-- Brand League City TX -->
                 <div class="flex flex-col items-center group cursor-pointer">
-                    <a href="league-city.html" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                    <a href="league-city.html" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(0,167,157,0.6)]">
                         <img src="images/brand.png" alt="Location - League City TX" class="h-24 md:h-28 w-auto" />
                     </a>
                     <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">League City TX</p>
@@ -547,7 +547,7 @@
 
                 <!-- Brand Richmond TX -->
                 <div class="flex flex-col items-center group cursor-pointer">
-                    <a href="#" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
+                    <a href="#" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(0,167,157,0.6)]">
                         <img src="images/brand.png" alt="Location - Richmond TX" class="h-24 md:h-28 w-auto" />
                     </a>
                     <p class="text-xs text-gray-400 mt-2 uppercase tracking-wide">Richmond TX</p>
@@ -563,8 +563,8 @@
 
                 <!-- Kiersh Co -->
                 <div class="flex flex-col items-center group cursor-pointer">
-                    <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(220,38,38,0.5)]">
-                        <img src="images/Kiersh-Co-Transparent-PNG.png" alt="Kiersh Catering" class="h-24 md:h-28 w-auto" />
+                    <a href="https://kiershcateringevents.com/" target="_blank" rel="noopener noreferrer" class="transition-all duration-500 group-hover:scale-110 group-hover:drop-shadow-[0_0_30px_rgba(255,255,255,0.6)]">
+                        <img src="images/Kiersh-Co-Transparent-PNG.png" alt="Kiersh Catering" class="h-20 md:h-24 w-auto" />
                     </a>
                 </div>
             </div>
