--- a/careers.html
+++ b/careers.html
@@ -7,30 +7,107 @@
     <meta name="description" content="Apply to work at Red River BBQ & Grill. We're hiring for various positions. Submit your employment application online.">
     <link rel="canonical" href="https://redriverbbq.com/careers.html">
     
-    <!-- Schema.org Job Posting Markup -->
+    <!-- Comprehensive Job & Organization Schema for SEO -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
-        "@type": "JobPosting",
-        "title": "Restaurant Positions",
-        "description": "Apply for positions at Red River BBQ & Grill",
-        "hiringOrganization": {
-            "@type": "Organization",
-            "name": "Red River BBQ & Grill",
-            "sameAs": "https://redriverbbq.com",
-            "logo": "https://redriverbbq.com/images/RRBBQBrand.png"
-        },
-        "jobLocation": {
-            "@type": "Place",
-            "address": {
-                "@type": "PostalAddress",
-                "streetAddress": "1911 E. Main St.",
-                "addressLocality": "League City",
-                "addressRegion": "TX",
-                "postalCode": "77573",
-                "addressCountry": "US"
+        "@graph": [
+            {
+                "@type": "BreadcrumbList",
+                "@id": "https://redriverbbq.com/careers.html#breadcrumb",
+                "itemListElement": [
+                    {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://redriverbbq.com/"},
+                    {"@type": "ListItem", "position": 2, "name": "Careers", "item": "https://redriverbbq.com/careers.html"}
+                ]
+            },
+            {
+                "@type": "JobPosting",
+                "@id": "https://redriverbbq.com/careers.html#jobposting",
+                "title": "Server - Red River BBQ & Grill",
+                "description": "We are hiring servers for our League City BBQ restaurant. Great pay, flexible schedule, and team environment.",
+                "employmentType": "Full-Time",
+                "hiringOrganization": {
+                    "@type": "Organization",
+                    "@id": "https://redriverbbq.com/#organization",
+                    "name": "Red River BBQ & Grill",
+                    "sameAs": "https://redriverbbq.com",
+                    "logo": "https://redriverbbq.com/images/RRBBQBrand.png",
+                    "url": "https://redriverbbq.com"
+                },
+                "jobLocation": {
+                    "@type": "Place",
+                    "address": {
+                        "@type": "PostalAddress",
+                        "streetAddress": "1911 E. Main St., Suite B",
+                        "addressLocality": "League City",
+                        "addressRegion": "TX",
+                        "postalCode": "77573",
+                        "addressCountry": "US"
+                    }
+                },
+                "baseSalary": {"@type": "PriceSpecification", "priceCurrency": "USD", "price": "20000-28000", "priceType": "SalaryOrWage"},
+                "datePosted": "2025-01-01",
+                "validThrough": "2026-12-31"
+            },
+            {
+                "@type": "JobPosting",
+                "@id": "https://redriverbbq.com/careers.html#jobposting2",
+                "title": "Cook - Red River BBQ & Grill",
+                "description": "We are hiring experienced cooks for our BBQ restaurant. Must have experience with grilling and food preparation.",
+                "employmentType": "Full-Time",
+                "hiringOrganization": {
+                    "@type": "Organization",
+                    "@id": "https://redriverbbq.com/#organization",
+                    "name": "Red River BBQ & Grill",
+                    "sameAs": "https://redriverbbq.com",
+                    "logo": "https://redriverbbq.com/images/RRBBQBrand.png",
+                    "url": "https://redriverbbq.com"
+                },
+                "jobLocation": {
+                    "@type": "Place",
+                    "address": {
+                        "@type": "PostalAddress",
+                        "streetAddress": "1911 E. Main St., Suite B",
+                        "addressLocality": "League City",
+                        "addressRegion": "TX",
+                        "postalCode": "77573",
+                        "addressCountry": "US"
+                    }
+                },
+                "baseSalary": {"@type": "PriceSpecification", "priceCurrency": "USD", "price": "28000-38000", "priceType": "SalaryOrWage"},
+                "datePosted": "2025-01-01",
+                "validThrough": "2026-12-31"
+            },
+            {
+                "@type": "JobPosting",
+                "@id": "https://redriverbbq.com/careers.html#jobposting3",
+                "title": "Cashier / Host - Red River BBQ & Grill",
+                "description": "We are hiring friendly cashiers and hosts for our restaurant. Great entry-level position with growth opportunities.",
+                "employmentType": "Full-Time",
+                "hiringOrganization": {
+                    "@type": "Organization",
+                    "@id": "https://redriverbbq.com/#organization",
+                    "name": "Red River BBQ & Grill",
+                    "sameAs": "https://redriverbbq.com",
+                    "logo": "https://redriverbbq.com/images/RRBBQBrand.png",
+                    "url": "https://redriverbbq.com"
+                },
+                "jobLocation": {
+                    "@type": "Place",
+                    "address": {
+                        "@type": "PostalAddress",
+                        "streetAddress": "1911 E. Main St., Suite B",
+                        "addressLocality": "League City",
+                        "addressRegion": "TX",
+                        "postalCode": "77573",
+                        "addressCountry": "US"
+                    }
+                },
+                "baseSalary": {"@type": "PriceSpecification", "priceCurrency": "USD", "price": "18000-24000", "priceType": "SalaryOrWage"},
+                "datePosted": "2025-01-01",
+                "validThrough": "2026-12-31"
             }
-        }
+        ]
     }
     </script>
     
@@ -439,6 +516,7 @@
                         <li><a href="party-room.html" class="nav-link hover:text-yellow-400 transition-all duration-300">PARTY ROOM</a></li>
                         <li><a href="./careers.html" class="nav-link hover:text-yellow-400 transition-all duration-300">CAREERS</a></li>
                         <li><a href="community.html" class="nav-link hover:text-yellow-400 transition-all duration-300">COMMUNITY</a></li>
+                        <li><a href="reviews.html" class="nav-link hover:text-yellow-400 transition-all duration-300">REVIEWS</a></li>
                     </ul>
                     <div class="mt-2 flex space-x-4 text-[11px] font-bold">
                         <a href="https://apps.apple.com/us/app/red-river-restaurants/id6744835848" target="_blank" rel="noopener noreferrer" class="text-red-400 hover:text-red-300 transition-colors flex items-center gap-1 hover:gap-2">
@@ -504,6 +582,12 @@
                     <a href="community.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all">
                         <i data-lucide="heart" class="w-5 h-5 text-red-500"></i>
                         Community
+                    </a>
+                </li>
+                <li>
+                    <a href="reviews.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all">
+                        <i data-lucide="star" class="w-5 h-5 text-red-500"></i>
+                        Reviews
                     </a>
                 </li>
             </ul>
