--- a/catering.html
+++ b/catering.html
@@ -7,17 +7,76 @@
     <meta name="description" content="Red River BBQ & Grill catering menu - featuring specialty items, action stations, hors d'oeuvres, appetizer trays, boxed meals, and more for your events in League City, TX.">
     <link rel="canonical" href="https://redriverbbq.com/catering.html">
     
-    <!-- Schema.org Menu Markup -->
+    <!-- Comprehensive Catering Service Schema for SEO -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
-        "@type": "Menu",
-        "name": "Red River BBQ & Grill Catering Menu",
-        "description": "Full-Service Catering and Event Services",
-        "provider": {
-            "@type": "Restaurant",
-            "@id": "https://redriverbbq.com/#restaurant"
-        }
+        "@graph": [
+            {
+                "@type": "BreadcrumbList",
+                "@id": "https://redriverbbq.com/catering.html#breadcrumb",
+                "itemListElement": [
+                    {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://redriverbbq.com/"},
+                    {"@type": "ListItem", "position": 2, "name": "Catering", "item": "https://redriverbbq.com/catering.html"}
+                ]
+            },
+            {
+                "@type": "LocalBusiness",
+                "@id": "https://redriverbbq.com/catering.html#catering",
+                "name": "Red River BBQ & Grill Catering Services",
+                "url": "https://redriverbbq.com/catering.html",
+                "telephone": "+12813328086",
+                "description": "Full-service catering and event services featuring authentic Texas BBQ, specialty items, action stations, and boxed meals.",
+                "image": "https://redriverbbq.com/images/RRBBQBrand.png",
+                "address": {
+                    "@type": "PostalAddress",
+                    "streetAddress": "1911 E. Main St., Suite B",
+                    "addressLocality": "League City",
+                    "addressRegion": "TX",
+                    "postalCode": "77573",
+                    "addressCountry": "US"
+                },
+                "serviceType": "Catering, Event Catering, Corporate Catering",
+                "areaServed": ["League City, TX", "Pasadena, TX", "Friendswood, TX", "Pearland, TX", "Houston, TX"]
+            },
+            {
+                "@type": "Menu",
+                "@id": "https://redriverbbq.com/catering.html#menu",
+                "name": "Red River BBQ & Grill Catering Menu",
+                "description": "Full-Service Catering Menu with specialty items, action stations, hors d'oeuvres, appetizer trays, boxed meals, and more.",
+                "url": "https://redriverbbq.com/catering.html",
+                "hasMenuSection": [
+                    {
+                        "@type": "MenuSection",
+                        "name": "BBQ Platters",
+                        "description": "Authentic smoked BBQ catering platters",
+                        "hasMenuItem": [
+                            {"@type": "MenuItem", "name": "Brisket Platter", "description": "Slow-smoked beef brisket serving 6", "offers": {"@type": "Offer", "priceCurrency": "USD", "price": "89.95"}},
+                            {"@type": "MenuItem", "name": "Rib Platter", "description": "Fall-off-the-bone ribs serving 6", "offers": {"@type": "Offer", "priceCurrency": "USD", "price": "99.95"}},
+                            {"@type": "MenuItem", "name": "Mixed Meat Platter", "description": "Combination of brisket, ribs, and pulled pork serving 8", "offers": {"@type": "Offer", "priceCurrency": "USD", "price": "129.95"}}
+                        ]
+                    },
+                    {
+                        "@type": "MenuSection",
+                        "name": "Party Packages",
+                        "description": "Complete catering packages for your event",
+                        "hasMenuItem": [
+                            {"@type": "MenuItem", "name": "Basic BBQ Package", "description": "Smoked meats, sides, and cornbread for 25 guests", "offers": {"@type": "Offer", "priceCurrency": "USD", "price": "349.95"}},
+                            {"@type": "MenuItem", "name": "Premium BBQ Package", "description": "All meats, premium sides, appetizers, and desserts for 25 guests", "offers": {"@type": "Offer", "priceCurrency": "USD", "price": "499.95"}}
+                        ]
+                    },
+                    {
+                        "@type": "MenuSection",
+                        "name": "Action Stations",
+                        "description": "Interactive catering stations for your guests",
+                        "hasMenuItem": [
+                            {"@type": "MenuItem", "name": "BBQ Carving Station", "description": "Live carving of smoked brisket and prime rib", "offers": {"@type": "Offer", "priceCurrency": "USD", "price": "399.95"}}
+                        ]
+                    }
+                ],
+                "provider": {"@type": "Restaurant", "@id": "https://redriverbbq.com/#restaurant"}
+            }
+        ]
     }
     </script>
     
@@ -344,6 +403,7 @@
                         <li><a href="party-room.html" class="nav-link hover:text-yellow-400 transition-all duration-300">PARTY ROOM</a></li>
                         <li><a href="./careers.html" class="nav-link hover:text-yellow-400 transition-all duration-300">CAREERS</a></li>
                         <li><a href="community.html" class="nav-link hover:text-yellow-400 transition-all duration-300">COMMUNITY</a></li>
+                        <li><a href="reviews.html" class="nav-link hover:text-yellow-400 transition-all duration-300">REVIEWS</a></li>
                     </ul>
                     <div class="mt-2 flex space-x-4 text-[11px] font-bold">
                         <a href="https://apps.apple.com/us/app/red-river-restaurants/id6744835848" target="_blank" rel="noopener noreferrer" class="text-red-400 hover:text-red-300 transition-colors flex items-center gap-1 hover:gap-2">
@@ -409,6 +469,12 @@
                     <a href="community.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all">
                         <i data-lucide="heart" class="w-5 h-5 text-red-500"></i>
                         Community
+                    </a>
+                </li>
+                <li>
+                    <a href="reviews.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all">
+                        <i data-lucide="star" class="w-5 h-5 text-red-500"></i>
+                        Reviews
                     </a>
                 </li>
             </ul>
@@ -718,6 +784,15 @@
                     </div>
                 </div>
 
+                <div class="menu-section bg-white rounded-lg p-6 shadow-md border-l-4 border-red-600">
+                    <p class="text-xs uppercase tracking-widest text-red-700 font-bold mb-2">Customer review</p>
+                    <blockquote class="text-gray-700 italic leading-relaxed">
+                        "What really stood out to me was the consistency in the quality of the food. Every dish was prepared with care and attention to detail. The portions were generous, and the prices were reasonable, making it a great value for the money."
+                    </blockquote>
+                    <p class="mt-3 text-sm text-gray-600">- James Bentivegna</p>
+                    <a href="reviews.html#portions-value-reviews" class="mt-2 inline-block text-sm text-red-700 font-semibold hover:text-red-800">Read the full portions and value review</a>
+                </div>
+
                 <!-- Booking Form Section -->
                 <div id="booking-form" class="menu-section mt-12 scroll-mt-24">
                     <h2>Book Your Catering Event</h2>
@@ -913,6 +988,9 @@
             </a>
             <a href="community.html" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all flex items-center gap-2">
                 <i data-lucide="heart" class="w-4 h-4"></i> Community
+            </a>
+            <a href="reviews.html" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
+                <i data-lucide="star" class="w-4 h-4"></i> ⭐ Customer Reviews
             </a>
             <a href="https://www.toasttab.com/red-river-bbq-league-city-1911-e-main-st-suite-b/marketing-signup" target="_blank" rel="noopener noreferrer" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
                 <i data-lucide="mail" class="w-4 h-4"></i> E-Club
