--- a/community.html
+++ b/community.html
@@ -7,22 +7,56 @@
     <meta name="description" content="Support your non-profit organization with Red River BBQ & Grill Spirit Days. Donate 15% of sales to your cause.">
     <link rel="canonical" href="https://redriverbbq.com/community.html">
     
-    <!-- Schema.org Community Markup -->
+    <!-- Comprehensive Community Initiative Schema for SEO -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "Red River BBQ & Grill Community",
-        "url": "https://redriverbbq.com/community.html",
-        "telephone": "+12813328086",
-        "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "1911 E. Main St.",
-            "addressLocality": "League City",
-            "addressRegion": "TX",
-            "postalCode": "77573",
-            "addressCountry": "US"
-        }
+        "@graph": [
+            {
+                "@type": "BreadcrumbList",
+                "@id": "https://redriverbbq.com/community.html#breadcrumb",
+                "itemListElement": [
+                    {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://redriverbbq.com/"},
+                    {"@type": "ListItem", "position": 2, "name": "Community", "item": "https://redriverbbq.com/community.html"}
+                ]
+            },
+            {
+                "@type": "LocalBusiness",
+                "@id": "https://redriverbbq.com/community.html#community",
+                "name": "Red River BBQ & Grill Community",
+                "url": "https://redriverbbq.com/community.html",
+                "telephone": "+12813328086",
+                "description": "Red River BBQ & Grill Spirit Days program where 15% of proceeds support your non-profit organization. Join us in giving back to the League City community.",
+                "image": "https://redriverbbq.com/images/RRBBQBrand.png",
+                "address": {
+                    "@type": "PostalAddress",
+                    "streetAddress": "1911 E. Main St., Suite B",
+                    "addressLocality": "League City",
+                    "addressRegion": "TX",
+                    "postalCode": "77573",
+                    "addressCountry": "US"
+                },
+                "areaServed": ["League City, TX", "Pasadena, TX"],
+                "serviceType": "Community Support, Charitable Fundraising"
+            },
+            {
+                "@type": "Service",
+                "@id": "https://redriverbbq.com/community.html#service",
+                "name": "Spirit Days Fundraising",
+                "description": "Red River BBQ & Grill Spirit Days program benefits non-profit organizations and schools with 15% of proceeds.",
+                "provider": {"@type": "Organization", "@id": "https://redriverbbq.com/#organization"},
+                "areaServed": ["League City, TX", "Pasadena, TX"],
+                "url": "https://redriverbbq.com/community.html"
+            },
+            {
+                "@type": "NGO",
+                "@id": "https://redriverbbq.com/community.html#ngo",
+                "name": "Red River BBQ & Grill Community Partners",
+                "description": "Supporting local non-profit organizations and schools through our Spirit Days fundraising program.",
+                "url": "https://redriverbbq.com/community.html",
+                "sameAs": ["https://www.facebook.com/profile.php?id=100063717936123"]
+            }
+        ]
     }
     </script>
     
@@ -299,6 +333,7 @@
                         <li><a href="party-room.html" class="nav-link hover:text-yellow-400 transition-all duration-300">PARTY ROOM</a></li>
                         <li><a href="./careers.html" class="nav-link hover:text-yellow-400 transition-all duration-300">CAREERS</a></li>
                         <li><a href="./community.html" class="nav-link hover:text-yellow-400 transition-all duration-300">COMMUNITY</a></li>
+                        <li><a href="reviews.html" class="nav-link hover:text-yellow-400 transition-all duration-300">REVIEWS</a></li>
                     </ul>
                     <div class="mt-2 flex space-x-4 text-[11px] font-bold">
                         <a href="https://apps.apple.com/us/app/red-river-restaurants/id6744835848" target="_blank" rel="noopener noreferrer" class="text-red-400 hover:text-red-300 transition-colors flex items-center gap-1 hover:gap-2">
@@ -364,6 +399,12 @@
                     <a href="./community.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all bg-gray-100">
                         <i data-lucide="heart" class="w-5 h-5 text-red-500"></i>
                         Community
+                    </a>
+                </li>
+                <li>
+                    <a href="reviews.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all">
+                        <i data-lucide="star" class="w-5 h-5 text-red-500"></i>
+                        Reviews
                     </a>
                 </li>
             </ul>
@@ -679,6 +720,9 @@
             </a>
             <a href="./community.html" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
                 <i data-lucide="heart" class="w-4 h-4"></i> Community
+            </a>
+            <a href="reviews.html" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
+                <i data-lucide="star" class="w-4 h-4"></i> ⭐ Customer Reviews
             </a>
             <a href="https://www.toasttab.com/red-river-bbq-league-city-1911-e-main-st-suite-b/marketing-signup" target="_blank" rel="noopener noreferrer" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
                 <i data-lucide="mail" class="w-4 h-4"></i> E-Club
