--- a/league-city-pickup.html
+++ b/league-city-pickup.html
@@ -4,6 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Online - League City Pickup | Red River Bar-B-Que & Grill</title>
+    
+    <!-- Schema.org Redirect & Ordering Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@graph": [
+            {
+                "@type": "BreadcrumbList",
+                "@id": "https://redriverbbq.com/league-city-pickup.html#breadcrumb",
+                "itemListElement": [
+                    {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://redriverbbq.com/"},
+                    {"@type": "ListItem", "position": 2, "name": "Order Online", "item": "https://redriverbbq.com/order.html"}
+                ]
+            },
+            {
+                "@type": "LocalBusiness",
+                "@id": "https://redriverbbq.com/league-city-pickup.html#pickup",
+                "name": "Red River BBQ & Grill - Pickup Orders",
+                "url": "https://redriverbbq.com/league-city-pickup.html",
+                "telephone": "+12813328086",
+                "description": "Order Red River BBQ & Grill online for pickup at our League City location.",
+                "address": {
+                    "@type": "PostalAddress",
+                    "streetAddress": "1911 E. Main St., Suite B",
+                    "addressLocality": "League City",
+                    "addressRegion": "TX",
+                    "postalCode": "77573",
+                    "addressCountry": "US"
+                }
+            }
+        ]
+    }
+    </script>
     <script>
         // Redirect to League City pickup ordering page
         window.location.href = "https://order.redriverrestaurants.com/order/red-river-bbq-league-city-1911-e-main-st-suite-b";
