--- a/menu.html
+++ b/menu.html
@@ -7,16 +7,60 @@
     <meta name="description" content="Red River BBQ & Grill menu - featuring slow-smoked Texas BBQ, ribs, brisket, pulled pork, chicken, and homestyle sides.">
     <link rel="canonical" href="https://redriverbbq.com/menu.html">
     
-    <!-- Schema.org Menu Markup -->
+    <!-- Comprehensive Menu Schema for SEO -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
-        "@type": "Menu",
-        "name": "Red River BBQ & Grill Menu",
-        "provider": {
-            "@type": "Restaurant",
-            "@id": "https://redriverbbq.com/#restaurant"
-        }
+        "@graph": [
+            {
+                "@type": "BreadcrumbList",
+                "@id": "https://redriverbbq.com/menu.html#breadcrumb",
+                "itemListElement": [
+                    {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://redriverbbq.com/"},
+                    {"@type": "ListItem", "position": 2, "name": "Menu", "item": "https://redriverbbq.com/menu.html"}
+                ]
+            },
+            {
+                "@type": "Menu",
+                "@id": "https://redriverbbq.com/menu.html#menu",
+                "name": "Red River BBQ & Grill Menu",
+                "description": "Authentic Texas BBQ menu featuring slow-smoked meats, ribs, brisket, pulled pork, chicken, and homestyle sides.",
+                "url": "https://redriverbbq.com/menu.html",
+                "image": "https://redriverbbq.com/images/RRBBQBrand.png",
+                "hasMenuSection": [
+                    {
+                        "@type": "MenuSection",
+                        "name": "Smoked Meats",
+                        "description": "Slow-smoked Texas BBQ specialties",
+                        "hasMenuItem": [
+                            {"@type": "MenuItem", "name": "Texas Brisket", "description": "Slow-smoked beef brisket", "offers": {"@type": "Offer", "priceCurrency": "USD", "price": "18.95"}},
+                            {"@type": "MenuItem", "name": "St. Louis Ribs", "description": "Fall-off-the-bone smoked ribs", "offers": {"@type": "Offer", "priceCurrency": "USD", "price": "19.95"}},
+                            {"@type": "MenuItem", "name": "Pulled Pork", "description": "Tender smoked pulled pork", "offers": {"@type": "Offer", "priceCurrency": "USD", "price": "14.95"}},
+                            {"@type": "MenuItem", "name": "Smoked Chicken", "description": "Juicy smoked chicken quarters", "offers": {"@type": "Offer", "priceCurrency": "USD", "price": "15.95"}}
+                        ]
+                    },
+                    {
+                        "@type": "MenuSection",
+                        "name": "Sides",
+                        "description": "Homestyle sides and complementary items",
+                        "hasMenuItem": [
+                            {"@type": "MenuItem", "name": "Mac & Cheese", "description": "Creamy homemade mac and cheese", "offers": {"@type": "Offer", "priceCurrency": "USD", "price": "4.95"}},
+                            {"@type": "MenuItem", "name": "Baked Beans", "description": "Homestyle baked beans", "offers": {"@type": "Offer", "priceCurrency": "USD", "price": "3.95"}}
+                        ]
+                    },
+                    {
+                        "@type": "MenuSection",
+                        "name": "Combo Meals",
+                        "description": "Complete BBQ meals with sides",
+                        "hasMenuItem": [
+                            {"@type": "MenuItem", "name": "BBQ Combo Plate", "description": "Your choice of two smoked meats with two sides and cornbread", "offers": {"@type": "Offer", "priceCurrency": "USD", "price": "24.95"}}
+                        ]
+                    }
+                ],
+                "provider": {"@type": "Restaurant", "@id": "https://redriverbbq.com/#restaurant"},
+                "aggregateRating": {"@type": "AggregateRating", "ratingValue": "4.4", "reviewCount": "3645"}
+            }
+        ]
     }
     </script>
     
@@ -347,6 +391,7 @@
                         <li><a href="party-room.html" class="nav-link hover:text-yellow-400 transition-all duration-300">PARTY ROOM</a></li>
                         <li><a href="./careers.html" class="nav-link hover:text-yellow-400 transition-all duration-300">CAREERS</a></li>
                         <li><a href="community.html" class="nav-link hover:text-yellow-400 transition-all duration-300">COMMUNITY</a></li>
+                        <li><a href="reviews.html" class="nav-link hover:text-yellow-400 transition-all duration-300">REVIEWS</a></li>
                     </ul>
                     <div class="mt-2 flex space-x-4 text-[11px] font-bold">
                         <a href="https://apps.apple.com/us/app/red-river-restaurants/id6744835848" target="_blank" rel="noopener noreferrer" class="text-red-400 hover:text-red-300 transition-colors flex items-center gap-1 hover:gap-2">
@@ -412,6 +457,12 @@
                     <a href="community.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all">
                         <i data-lucide="heart" class="w-5 h-5 text-red-500"></i>
                         Community
+                    </a>
+                </li>
+                <li>
+                    <a href="reviews.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all">
+                        <i data-lucide="star" class="w-5 h-5 text-red-500"></i>
+                        Reviews
                     </a>
                 </li>
             </ul>
@@ -520,6 +571,15 @@
                     </div>
                 </section>
 
+                <div class="mt-8 bg-red-50 border-l-4 border-red-600 p-5 rounded-lg">
+                    <p class="text-xs uppercase tracking-widest text-red-700 font-bold mb-2">Customer review</p>
+                    <blockquote class="text-gray-700 italic leading-relaxed">
+                        "I ordered the peanut butter cut brisket with macaroni and cheese and potato salad. This meal was great; I couldn't finish it all, as the portion was large and the food was filling. The brisket was tender and tasted amazing when paired with the barbecue sauce. The sides acted as a nice complement."
+                    </blockquote>
+                    <p class="mt-3 text-sm text-gray-600">- George Vernau</p>
+                    <a href="reviews.html#brisket-reviews" class="mt-2 inline-block text-sm text-red-700 font-semibold hover:text-red-800">Read the full brisket review</a>
+                </div>
+
                 <section class="menu-category">
                     <h2>BBQ Sandwiches</h2>
                     <p>Served on a toasted bun with pickles and onions</p>
@@ -582,6 +642,15 @@
                         <span class="price-tag">$24.99</span>
                     </div>
                 </section>
+
+                <div class="mt-8 bg-red-50 border-l-4 border-red-600 p-5 rounded-lg">
+                    <p class="text-xs uppercase tracking-widest text-red-700 font-bold mb-2">Customer review</p>
+                    <blockquote class="text-gray-700 italic leading-relaxed">
+                        "I haven't been here in over 20 years, but now I have a reason to visit more often; All you can eat pork ribs for $16.99 plus two sides. They tasted like candy, and very tender. All I can say is OMG I will see them next Tuesday as well."
+                    </blockquote>
+                    <p class="mt-3 text-sm text-gray-600">- Reeljoy</p>
+                    <a href="reviews.html#ribs-reviews" class="mt-2 inline-block text-sm text-red-700 font-semibold hover:text-red-800">Read the full ribs review</a>
+                </div>
 
                 <section class="menu-category">
                     <h2>Beverages</h2>
@@ -725,6 +794,9 @@
             </a>
             <a href="community.html" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all flex items-center gap-2">
                 <i data-lucide="heart" class="w-4 h-4"></i> Community
+            </a>
+            <a href="reviews.html" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
+                <i data-lucide="star" class="w-4 h-4"></i> ⭐ Customer Reviews
             </a>
             <a href="https://www.toasttab.com/red-river-bbq-league-city-1911-e-main-st-suite-b/marketing-signup" target="_blank" rel="noopener noreferrer" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
                 <i data-lucide="mail" class="w-4 h-4"></i> E-Club
