--- a/order.html
+++ b/order.html
@@ -5,6 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Online • Red River BBQ & Grill</title>
     <meta name="description" content="Order Red River BBQ & Grill online for pickup or delivery in League City.">
+    
+    <!-- Schema.org E-Commerce Markup -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@graph": [
+            {
+                "@type": "BreadcrumbList",
+                "@id": "https://redriverbbq.com/order.html#breadcrumb",
+                "itemListElement": [
+                    {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://redriverbbq.com/"},
+                    {"@type": "ListItem", "position": 2, "name": "Order Online", "item": "https://redriverbbq.com/order.html"}
+                ]
+            },
+            {
+                "@type": "LocalBusiness",
+                "@id": "https://redriverbbq.com/order.html#orderonline",
+                "name": "Red River BBQ & Grill - Order Online",
+                "url": "https://redriverbbq.com/order.html",
+                "telephone": "+12813328086",
+                "description": "Order Red River BBQ & Grill online for convenient pickup or delivery. Fast, easy ordering.",
+                "address": {
+                    "@type": "PostalAddress",
+                    "streetAddress": "1911 E. Main St., Suite B",
+                    "addressLocality": "League City",
+                    "addressRegion": "TX",
+                    "postalCode": "77573",
+                    "addressCountry": "US"
+                }
+            },
+            {
+                "@type": "AggregateOffer",
+                "@id": "https://redriverbbq.com/order.html#offers",
+                "name": "BBQ Orders",
+                "description": "Order authentic Texas BBQ from Red River BBQ & Grill",
+                "url": "https://redriverbbq.com/order.html",
+                "priceCurrency": "USD",
+                "price": "12-50",
+                "availability": "https://schema.org/InStock",
+                "offerCount": "50+"
+            }
+        ]
+    }
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -96,6 +140,7 @@
             <a href="./careers.html" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">Careers</a>
             <a href="catering.html" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">Catering</a>
             <a href="community.html" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">Community</a>
+            <a href="reviews.html" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">⭐ Customer Reviews</a>
             <a href="https://www.toasttab.com/red-river-bbq-league-city-1911-e-main-st-suite-b/marketing-signup" target="_blank" rel="noopener noreferrer" class="bg-gray-800/50 px-4 py-2 rounded-full text-sm hover:bg-gray-700 transition-all">E-Club</a>
         </div>
 
