--- a/party-room.html
+++ b/party-room.html
@@ -7,26 +7,62 @@
     <meta name="description" content="Reserve the Red River BBQ & Grill Party Room for your next private event. Perfect for birthdays, corporate events, and celebrations with authentic Texas BBQ catering.">
     <link rel="canonical" href="https://redriverbbq.com/party-room.html">
     
-    <!-- Schema.org Event Venue Markup -->
+    <!-- Comprehensive Event Venue and Service Schema for SEO -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
-        "@type": "EventVenue",
-        "name": "Red River BBQ & Grill Party Room",
-        "url": "https://redriverbbq.com/party-room.html",
-        "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "1911 E. Main St.",
-            "addressLocality": "League City",
-            "addressRegion": "TX",
-            "postalCode": "77573",
-            "addressCountry": "US"
-        },
-        "telephone": "+12813328086",
-        "parentOrganization": {
-            "@type": "Restaurant",
-            "@id": "https://redriverbbq.com/#restaurant"
-        }
+        "@graph": [
+            {
+                "@type": "BreadcrumbList",
+                "@id": "https://redriverbbq.com/party-room.html#breadcrumb",
+                "itemListElement": [
+                    {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://redriverbbq.com/"},
+                    {"@type": "ListItem", "position": 2, "name": "Party Room", "item": "https://redriverbbq.com/party-room.html"}
+                ]
+            },
+            {
+                "@type": "EventVenue",
+                "@id": "https://redriverbbq.com/party-room.html#venue",
+                "name": "Red River BBQ & Grill Party Room",
+                "url": "https://redriverbbq.com/party-room.html",
+                "description": "Private event venue perfect for birthdays, corporate events, and celebrations with authentic Texas BBQ catering.",
+                "address": {
+                    "@type": "PostalAddress",
+                    "streetAddress": "1911 E. Main St., Suite B",
+                    "addressLocality": "League City",
+                    "addressRegion": "TX",
+                    "postalCode": "77573",
+                    "addressCountry": "US"
+                },
+                "telephone": "+12813328086",
+                "image": "https://redriverbbq.com/images/RRBBQBrand.png",
+                "geo": {"@type": "GeoCoordinates", "latitude": 29.4952, "longitude": -95.0863},
+                "amenityFeature": [
+                    {"@type": "LocationFeatureSpecification", "name": "Private Party Room"},
+                    {"@type": "LocationFeatureSpecification", "name": "Full Catering Services"},
+                    {"@type": "LocationFeatureSpecification", "name": "Indoor Seating"},
+                    {"@type": "LocationFeatureSpecification", "name": "Bar Service"}
+                ],
+                "parentOrganization": {"@type": "Restaurant", "@id": "https://redriverbbq.com/#restaurant"}
+            },
+            {
+                "@type": "Service",
+                "@id": "https://redriverbbq.com/party-room.html#service",
+                "name": "Private Event and Party Room Rental",
+                "description": "Reserve the Red River BBQ & Grill Party Room for your private events with full catering services",
+                "provider": {"@type": "Restaurant", "@id": "https://redriverbbq.com/#restaurant"},
+                "areaServed": ["League City, TX", "Pasadena, TX", "Friendswood, TX"],
+                "priceRange": "$$"
+            },
+            {
+                "@type": "AggregateRating",
+                "@id": "https://redriverbbq.com/party-room.html#rating",
+                "ratingValue": "4.4",
+                "reviewCount": "3645",
+                "bestRating": "5",
+                "worstRating": "1"
+            }
+        ]
     }
     </script>
     
@@ -297,6 +333,7 @@
                         <li><a href="party-room.html" class="nav-link hover:text-yellow-400 transition-all duration-300">PARTY ROOM</a></li>
                         <li><a href="./careers.html" class="nav-link hover:text-yellow-400 transition-all duration-300">CAREERS</a></li>
                         <li><a href="community.html" class="nav-link hover:text-yellow-400 transition-all duration-300">COMMUNITY</a></li>
+                        <li><a href="reviews.html" class="nav-link hover:text-yellow-400 transition-all duration-300">REVIEWS</a></li>
                     </ul>
                     <div class="mt-2 flex space-x-4 text-[11px] font-bold">
                         <a href="https://apps.apple.com/us/app/red-river-restaurants/id6744835848" target="_blank" rel="noopener noreferrer" class="text-red-400 hover:text-red-300 transition-colors flex items-center gap-1 hover:gap-2">
@@ -362,6 +399,12 @@
                     <a href="community.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all">
                         <i data-lucide="heart" class="w-5 h-5 text-red-500"></i>
                         Community
+                    </a>
+                </li>
+                <li>
+                    <a href="reviews.html" class="flex items-center gap-3 px-4 py-3 text-black font-oswald font-bold uppercase tracking-wide rounded-lg hover:bg-gray-100 transition-all">
+                        <i data-lucide="star" class="w-5 h-5 text-red-500"></i>
+                        Reviews
                     </a>
                 </li>
             </ul>
@@ -625,6 +668,15 @@
                         </li>
                     </ul>
                 </div>
+
+                <div class="mt-10 bg-red-50 border-l-4 border-red-600 p-6 rounded-lg reveal">
+                    <p class="text-xs uppercase tracking-widest text-red-700 font-bold mb-2">Customer review</p>
+                    <blockquote class="text-gray-700 italic leading-relaxed">
+                        "Absolutely love the environment and food, but what I absolutely love even more is the customer service especially Mr. Philip and Mr. Ordacio (a believe he busses tables). Both gentlemen made my family and I experience worth more than we can afford. Mr. Philip assisted us once prior and has been amazing every visit."
+                    </blockquote>
+                    <p class="mt-3 text-sm text-gray-600">- Elijah Millender</p>
+                    <a href="reviews.html#service-reviews" class="mt-2 inline-block text-sm text-red-700 font-semibold hover:text-red-800">Read the full service review</a>
+                </div>
             </div>
         </section>
 
@@ -746,6 +798,9 @@
             </a>
             <a href="community.html" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
                 <i data-lucide="heart" class="w-4 h-4"></i> Community
+            </a>
+            <a href="reviews.html" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
+                <i data-lucide="star" class="w-4 h-4"></i> ⭐ Customer Reviews
             </a>
             <a href="https://www.toasttab.com/red-river-bbq-league-city-1911-e-main-st-suite-b/marketing-signup" target="_blank" rel="noopener noreferrer" class="glass px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-all flex items-center gap-2">
                 <i data-lucide="mail" class="w-4 h-4"></i> E-Club
